--- a/Online Sales Management System/Areas/Admin/Views/Shared/_PermissionDeniedModal.cshtml
+++ b/Online Sales Management System/Areas/Admin/Views/Shared/_PermissionDeniedModal.cshtml
@@ -1,16 +1,18 @@
-﻿<div class="modal fade" id="permissionDeniedModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content border-0 shadow">
+<div class="modal fade" id="permissionDeniedModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">🚫 Permission denied</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title"><i class="fas fa-ban mr-1"></i> Permission denied</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-                You don't have permission to show this page!
+                You don’t have permission to show this page!
             </div>
             <div class="modal-footer">
-                <a class="btn btn-outline-secondary" href="/Admin/Dashboard">Go to Dashboard</a>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                <a class="btn btn-default" href="/Admin/Dashboard">Go to Dashboard</a>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
@@ -19,10 +21,7 @@
 <script>
     window.OSMS = window.OSMS || {};
     window.OSMS.showPermissionDenied = function () {
-        if (!window.bootstrap) return;
-        const el = document.getElementById('permissionDeniedModal');
-        if (!el) return;
-        const modal = bootstrap.Modal.getOrCreateInstance(el);
-        modal.show();
+        if (!window.jQuery) return;
+        $('#permissionDeniedModal').modal('show');
     };
 </script>
